--- a/ChameleonServices.Web/wwwroot/index.html
+++ b/ChameleonServices.Web/wwwroot/index.html
@@ -7,8 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <base href="/" />
 
-    <link href="css/app.css" rel="stylesheet" />
+    <link href="css/app.min.css" rel="stylesheet" />
     <link href="ChameleonServices.Web.styles.css" rel="stylesheet" />
+
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet" />
 
     <!-- Facebook OpenGraph metadata -->
     <meta property="og:image" content="https://chameleon.services/media/logo-lg.png">
@@ -36,6 +39,7 @@
     </div>
 
     <script src="_framework/blazor.webassembly.js"></script>
+    <script src="_content/MudBlazor/MudBlazor.min.js"></script>
 </body>
 
 </html>
